# youtube-thumbnail-performance-predictor

./: .gitignore  Datapipeline  LICENSE  Makefile  README.md  channels.txt  environment.yml  new_ocr.py  pyproject.toml
models/: fusion_mlp_shap.pt
notebooks/: Discretized.ipynb  Regression.ipynb  Training.ipynb  Training_Regression.ipynb
outputs/: ablation_regression_all_runs.csv  ablation_regression_summary.csv  ablation_table.csv  cross_split_regression.csv  cross_split_regression.json  shap_feature_importance.csv  shap_notes.md  shap_regression_feature_importance.csv  shap_regression_notes.md  shap_regression_run_metadata.json  shap_regression_top7_features.csv  shap_top10_features.csv
scripts/: OCRandface_visualization.py  fetch_youtube_data.py  run_baselines.py  run_cnn_embeddings.py  run_face_emotion_detection.py
tests/: test_baselines_contract.py  test_cnn_embeddings_contract.py  test_face_emotion_detection_contract.py  test_ocr_features.py
thumbnail_performance/: Intretability.py  __init__.py  baselines.py  cnn_embeddings.py  dataset.py  datasplitting  face_emotion_detection.py  features.py  interpretability.py  ocr_features.py  plots.py  title_embeddings.py
training/: ablation_study.py  ablation_study_regression.py  eval_crosssplit.py  eval_crosssplit_regression.py  evaluate_regression_ab.py  finetune_fusion_end_to_end.py  plot_regression_predictions.py  run_new_data_pipeline.py  run_shap_analysis.py  run_shap_regression.py  shap.py  train_fusion.py  train_fusion_regression.py  tune_fusion_regression.py
utils/: class_weights.py
(+32 files in other folders)
