[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "thumbnail_performance"
version = "0.0.1"
description = "This project predicts relative YouTube thumbnail performance using multi-modal machine learning. By combining OCR-based text features, face and emotion analysis, and deep visual embeddings, the model identifies thumbnail characteristics correlated with higher engagement."
authors = [
  { name = "Influence AI" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["thumbnail_performance"]
force_sort_within_sections = true


